[package]
name = "gen_permutations"
version = "0.1.0"
authors = ["MisterEggnog <12803156+MisterEggnog@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
unicode-segmentation = "1.6"
